--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    root /var/www/html;
+    root /usr/share/nginx/html;
     index index.php index.html index.htm;
 
     location / {
