--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -1,10 +1,23 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mysql-pv
+spec:
+  capacity:
+    storage: 2Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    path: "/mnt/kubernetes-pool/kubernetes/login-app/db"
+    server: 192.168.100.106
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
