--- a/php-app-deployment.yaml
+++ b/php-app-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: php-app
-        image: absolutezero24/php-login:latest
+        image: absolutezero24/php-login:v1.1
         ports:
         - containerPort: 80
 ---
