--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -17,6 +17,7 @@ spec:
         image: absolutezero24/php-nginx-login:v1.1
         ports:
         - containerPort: 80
+      automountServiceAccountToken: false
 ---
 apiVersion: v1
 kind: Service
